--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     let CustomerFavFood = prompt("What is you'r Type of meet they are love ?");
     console.log(CustomerFavFood);
 
-    alert("Hello " + Customer + " In Shiyyab Resturant, in the customer detail we git you a random table number.")
+    alert("Hello " + Customer + " In Shiyyab Resturant\n" + "You are comming on " + TimeCome + "\nYou are : " + Howmany + " Person\n"
+    + "You love :" + CustomerFavFood + " Food\n" )
     let tablenumber = Math.floor(Math.random() * 10) + 1;
 
 </script>
